--- a/HyperBand_180datasets.ipynb
+++ b/HyperBand_180datasets.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "f1655e04-1989-421f-bb64-59bd00087f47",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "8a55edc2-8896-4a4e-93b4-52161bdf78f1",
    "metadata": {},
    "outputs": [
@@ -141,18 +141,10 @@
      "text": [
       "Step 1: Dividing the training and testing set with ratio 1:1 (50%).\n",
       "(5000, 1024) (4999, 1024)\n",
-      "Step 2: Formatting the training and testing sets and generating validating set.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'noInput' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-150670643226>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mdf_train_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoInput\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mnoOutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mx_train_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_train_i\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnoInput\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_train_i\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoInput\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mx_train_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_val_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.078125\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'noInput' is not defined"
+      "Step 2: Formatting the training and testing sets and generating validating set.\n",
+      "Training set:  (5000, 118, 3) (5000, 118, 5)\n",
+      "Validating set:  (5000, 10, 3) (5000, 10, 5)\n",
+      "Testing set:  (4999, 128, 3) (4999, 128, 5)\n"
      ]
     }
    ],
@@ -183,51 +175,118 @@
     "    df_test_i = df_test[i].reshape(-1, noInput+noOutput)\n",
     "    x_test_i, y_test_i = df_test_i[:, 0:noInput], df_test_i[:, noInput:]\n",
     "    x_test = x_test_i[np.newaxis,:,:] if x_test is None else np.append(x_test, x_test_i[np.newaxis,:,:], axis=0)\n",
+    "    y_test = y_test_i[np.newaxis,:,:] if y_test is None else np.append(y_test, y_test_i[np.newaxis,:,:], axis=0)\n",
     "print(\"Testing set: \", x_test.shape, y_test.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb01e021-bf79-4c1d-ac30-18bd79f180a4",
+   "metadata": {},
+   "source": [
+    "## 3. LSTM with HyperBand (for Tuning)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "id": "8bb31b67-5735-48ad-82df-3c22067abbb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bf4bf42-2c11-4be8-88b9-517da4a72b77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3b9a14ee-eb98-4792-a360-dcb92f46367a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 12)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6],\n",
-       "       [1, 2, 3],\n",
-       "       [4, 5, 6]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test = np.array([1, 2, 3, 4, 5, 6,1, 2, 3, 4, 5, 6]).reshape(1,-1)\n",
-    "display(test.shape, test)\n",
-    "test.reshape(-1, 3)"
+    "log_dir_lstm_v1 = \"logs//hparams//lstm//v1_\" + snapshot\n",
+    "activationfunctions = ['relu', 'sigmoid', 'tanh', 'softmax', 'softsign', 'selu', 'elu']\n",
+    "def tunner_lstm_model_v1(hp):\n",
+    "    \"\"\"Builds a recurrent model.\"\"\"\n",
+    "    model = keras.Sequential()\n",
+    "    model.add(Input(shape=(rows, cols)))\n",
+    "    model.add(LSTM(units=hp.Int('units_LSTM',\n",
+    "                                min_value=2,\n",
+    "                                max_value=512,\n",
+    "                                step=32), \n",
+    "                   activation=hp.Choice('activation_LSTM', activationfunctions)))\n",
+    "    model.add(Dense(units=hp.Int('units_hidden',\n",
+    "                                min_value=2,\n",
+    "                                max_value=256,\n",
+    "                                step=2),\n",
+    "                   activation='relu'))\n",
+    "    \n",
+    "    model.add(Dense(6, activation='softmax'))\n",
+    "    if (hp.Choice('optimizer', ['adam', 'sgd']) == 'adam'):\n",
+    "        optimizer = keras.optimizers.Adam(hp.Choice('learning_rate',\n",
+    "                                  values=[1e-1, 1e-2, 1e-3, 1e-4, 1e-5]))\n",
+    "    else:\n",
+    "        optimizer = keras.optimizers.SGD(hp.Choice('learning_rate',\n",
+    "                                  values=[1e-1, 1e-2, 1e-3, 1e-4, 1e-5]))\n",
+    "    model.compile(optimizer=optimizer,\n",
+    "                  loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+    "                  metrics=[tf.keras.metrics.CategoricalAccuracy(name='categorical_accuracy'),\n",
+    "                           tf.keras.metrics.Precision(name='precision'),\n",
+    "                           tf.keras.metrics.Recall(name='recall')\n",
+    "                          ])\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "lstm_tuner_v1=Hyperband(\n",
+    "    tunner_lstm_model_v1,\n",
+    "    objective=kt.Objective('val_categorical_accuracy', direction='max'),\n",
+    "    max_epochs=50,\n",
+    "    seed=42,\n",
+    "    directory=\"logs/tuner/lstm\",\n",
+    "    project_name=\"MasterThesis\",\n",
+    "    overwrite=True,\n",
+    "    logger=TensorBoardLogger(\n",
+    "        metrics=['loss', 'categorical_accuracy', 'val_loss', 'val_categorical_accuracy', 'precision', 'recall'], logdir=log_dir_lstm_v1,\n",
+    "    ) # add only this argument\n",
+    ")\n",
+    "\n",
+    "setup_tb(lstm_tuner_v1)  # (Optional) For more accurate visualization.\n",
+    "lstm_tuner_v1.search(X_train, y_train,\n",
+    "             epochs=50,\n",
+    "             batch_size=64,\n",
+    "             validation_data=(X_val, y_val),\n",
+    "             shuffle=False\n",
+    "            )\n",
+    "tensorboard_callback = keras.callbacks.TensorBoard(log_dir=log_dir_lstm_v1, profile_batch = '500,520')\n",
+    "bestparams_v1 = lstm_tuner_v1.get_best_hyperparameters(1)[0]\n",
+    "hyper_model_v1 = lstm_tuner_v1.hypermodel.build(bestparams_v1)\n",
+    "training_history_v1 = hyper_model_v1.fit(\n",
+    "    X_train, # input\n",
+    "    y_train, # output\n",
+    "    batch_size=64,\n",
+    "    verbose=0, # Suppress chatty output; use Tensorboard instead\n",
+    "    epochs=40,\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    callbacks=[tensorboard_callback],\n",
+    ")\n",
+    "print(\"Average loss: \", np.average(training_history_v1.history['loss']))\n",
+    "print(\"Average val loss: \", np.average(training_history_v1.history['val_loss']))\n",
+    "print(\"Average accuracy: \", np.average(training_history_v1.history['categorical_accuracy']))\n",
+    "print(\"Average val accuracy: \", np.average(training_history_v1.history['val_categorical_accuracy']))\n",
+    "train_result = hyper_model_v1.evaluate(X_train, y_train)\n",
+    "val_result = hyper_model_v1.evaluate(X_val, y_val)\n",
+    "test_result = hyper_model_v1.evaluate(X_test, y_test)\n",
+    "newUser_result = hyper_model_v1.evaluate(X_newUser, y_newUser)\n",
+    "print(\"Train: \", train_result)\n",
+    "print(\"Train: \", val_result)\n",
+    "print(\"Train: \", test_result)\n",
+    "print(\"Train: \", newUser_result)"
    ]
   },
   {
