--- a/HyperBand_180datasets.ipynb
+++ b/HyperBand_180datasets.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 177,
    "id": "f1655e04-1989-421f-bb64-59bd00087f47",
    "metadata": {},
    "outputs": [
@@ -38,13 +38,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 1, ..., 1, 0, 1],\n",
-       "       [1, 1, 0, ..., 1, 1, 1],\n",
-       "       [0, 1, 0, ..., 1, 0, 1],\n",
+       "array([[0, 1, 0, ..., 1, 1, 1],\n",
+       "       [0, 0, 0, ..., 1, 1, 0],\n",
+       "       [1, 0, 0, ..., 1, 1, 1],\n",
        "       ...,\n",
-       "       [0, 1, 1, ..., 1, 1, 1],\n",
-       "       [1, 0, 1, ..., 0, 1, 0],\n",
-       "       [1, 1, 1, ..., 1, 1, 1]])"
+       "       [1, 1, 1, ..., 0, 1, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 1],\n",
+       "       [0, 1, 0, ..., 0, 1, 0]])"
       ]
      },
      "metadata": {},
@@ -112,7 +112,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "# Writing to file\n",
-    "filepath = './Version9.128timesteps/seqnetdata.ni=3.no=5.mc=15.numTimeSteps128.version9.0.csv'\n",
+    "filepath = './Version9.128timesteps/seqnetdata.ni=3.no=5.mc=15.numTimeSteps128.version9.4.csv'\n",
     "with open(filepath, \"r\") as fp:\n",
     "    [noInput, noOutput] = [int(x) for x in fp.readline().split(',')]\n",
     "rdf = np.array(pd.read_csv(filepath, skiprows=1))\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 178,
    "id": "100c9d6c-edc6-4040-af5d-783c494b0f57",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 179,
    "id": "88451003-9a3e-4dbc-bcd6-a660d5924c11",
    "metadata": {},
    "outputs": [
@@ -218,16 +218,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_50\"\n",
+      "Model: \"sequential_54\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm_50 (LSTM)               (None, 8)                 384       \n",
+      "lstm_54 (LSTM)               (None, 128)               67584     \n",
       "_________________________________________________________________\n",
-      "dense_53 (Dense)             (None, 5)                 45        \n",
+      "dense_57 (Dense)             (None, 5)                 645       \n",
       "=================================================================\n",
-      "Total params: 429\n",
-      "Trainable params: 429\n",
+      "Total params: 68,229\n",
+      "Trainable params: 68,229\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "157/157 [==============================] - 1s 5ms/step - loss: 0.6561 - binary_accuracy: 0.5542\n"
+      "157/157 [==============================] - 1s 6ms/step - loss: 0.2828 - binary_accuracy: 0.8030\n"
      ]
     }
    ],
@@ -254,22 +254,26 @@
     "lstm_model = tf.keras.Sequential()\n",
     "lstm_model.add(\n",
     "  tf.keras.layers.LSTM(\n",
-    "      units=8, \n",
+    "      units=128, \n",
     "      input_shape=[x_train.shape[1], x_train.shape[2]],\n",
     "      activation='tanh', recurrent_activation='sigmoid',\n",
+    "      unroll =False,\n",
+    "      use_bias=True,\n",
+    "      recurrent_dropout=0,\n",
     "      return_sequences=False\n",
     "  )\n",
     ")\n",
+    "\n",
     "lstm_model.add(tf.keras.layers.Dense(y_train.shape[1], activation='tanh'))\n",
     "adam = tf.optimizers.Adam(learning_rate = 0.001, decay=1e-6)\n",
     "# lstm_model.compile(loss='mse', optimizer=adam, metrics='mse')\n",
-    "lstm_model.compile(loss='binary_crossentropy', optimizer=adam, metrics=[tf.keras.metrics.BinaryAccuracy()])\n",
+    "lstm_model.compile(loss='binary_crossentropy', optimizer=adam, metrics=[tf.keras.metrics.BinaryAccuracy(threshold=0.51)])\n",
     "\n",
     "strt_time = datetime.datetime.now() \n",
     "lstm_model.fit(\n",
     "    x_train, y_train,\n",
-    "    epochs=50,\n",
-    "    batch_size=128,\n",
+    "    epochs=8,\n",
+    "    batch_size=1,\n",
     "    verbose=0,\n",
     "    validation_data=(x_val, y_val),\n",
     "    shuffle=True,\n",
@@ -285,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 180,
    "id": "6f9e987f-40e2-4800-90b1-f471dcab3f70",
    "metadata": {},
    "outputs": [
@@ -293,50 +297,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.54152155 0.53140956 0.8346006  0.48424467 0.46536037]\n",
-      " [0.475966   0.46612918 0.6365521  0.5390656  0.5439211 ]\n",
-      " [0.50587314 0.48138535 0.75458765 0.44335267 0.43426985]\n",
+      "[[-0.19788855  0.6051079  -0.5205557   0.99930775  0.5333794 ]\n",
+      " [ 0.99878234  0.50712156 -0.7296089   0.99404347  0.5857842 ]\n",
+      " [ 0.99945194  0.44372046  0.99650085  0.99919295  0.55372477]\n",
       " ...\n",
-      " [0.4994725  0.5078875  0.716302   0.5142584  0.5203327 ]\n",
-      " [0.5044837  0.5441371  0.79088694 0.4814741  0.5127389 ]\n",
-      " [0.52626884 0.524647   0.79141533 0.49953428 0.48485494]]\n",
+      " [ 0.9923825   0.48660094  0.99015915  0.99815124  0.5038921 ]\n",
+      " [-0.68550926  0.585049    0.9999517  -0.9407191   0.38284588]\n",
+      " [ 0.9945059   0.48318762  0.98883027  0.99833316  0.50074506]]\n",
       "0.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(4999, 5)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       ...,\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0]], dtype=int32)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 1, 0, 0],\n",
-       "       [1, 1, 1, 0, 0],\n",
-       "       [1, 1, 0, 1, 1],\n",
-       "       ...,\n",
-       "       [0, 1, 1, 0, 1],\n",
+       "array([[1, 1, 1, 1, 1],\n",
        "       [1, 1, 1, 1, 1],\n",
-       "       [0, 1, 1, 1, 0]], dtype=int32)"
+       "       [1, 1, 1, 1, 1],\n",
+       "       ...,\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]], dtype=int32)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 1],\n",
+       "       [1, 1, 0, 1, 0],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       ...,\n",
+       "       [1, 1, 1, 1, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [1, 0, 1, 1, 0]], dtype=int32)"
       ]
      },
      "metadata": {},
@@ -346,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "261 0.052210442088417686 [0.6560914516448975, 0.5541907548904419]\n"
+      "175 0.035007001400280055 0.8030405640602112 4014.3997797369957\n"
      ]
     }
    ],
@@ -358,16 +353,15 @@
     "m.update_state(y_pred, y_val)\n",
     "print(m.result().numpy())\n",
     "\n",
-    "y_pred[np.where(y_pred < 0.6)] = 0\n",
-    "y_pred[np.where(y_pred >= 0.6)] = 1\n",
-    "display(y_pred.shape)\n",
+    "y_pred[np.where(y_pred < 0)] = 0\n",
+    "y_pred[np.where(y_pred >= 0)] = 1\n",
     "display(y_pred.astype('int32'))\n",
     "display(y_val.astype('int32'))\n",
     "count = 0\n",
     "for i in range(y_pred.shape[0]):\n",
     "    if (np.array_equal(y_pred[i].astype('int32'), y_val[i].astype('int32'))):\n",
     "        count += 1\n",
-    "print(count, count/y_pred.shape[0], val_performance[1])"
+    "print(count, count/y_pred.shape[0], val_performance[1], val_performance[1]*y_pred.shape[0])"
    ]
   },
   {
@@ -427,7 +421,7 @@
     "      units=8, \n",
     "      input_shape=[x_train.shape[1], x_train.shape[2]],\n",
     "      activation='tanh', recurrent_activation='sigmoid',\n",
-    "      return_sequences=False\n",
+    "      return_sequences=False #many2many\n",
     "  )\n",
     ")\n",
     "lstm_model.add(tf.keras.layers.Dense(y_train_norm.shape[1], activation='tanh'))\n",
