--- a/HyperBand_180datasets_v1.ipynb
+++ b/HyperBand_180datasets_v1.ipynb
@@ -1211,7 +1211,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "157/157 [==============================] - 0s 3ms/step - loss: 1.5028e-04 - binary_accuracy: 1.0000\n"
+      "157/157 [==============================] - 0s 3ms/step - loss: 1.5028e-04 - binary_accuracy: 1.0000\n",
+      "Model: \"sequential_19\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm_19 (LSTM)               (None, 128)               67584     \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 5)                 645       \n",
+      "=================================================================\n",
+      "Total params: 68,229\n",
+      "Trainable params: 68,229\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "157/157 [==============================] - 0s 3ms/step - loss: 9.3064e-05 - binary_accuracy: 1.0000\n",
+      "Step 1: Dividing the training and testing set with ratio 1:1 (50%).\n",
+      "(5000, 1024) (4999, 1024)\n",
+      "Step 2: Separating values and labels.\n",
+      "+ Training set:    (5000, 128, 3) (5000, 5) float32\n",
+      "+ Validating set:  (4999, 128, 3) (4999, 5) float32\n",
+      "Step 3: LSTM modeling.\n",
+      "Model: \"sequential_20\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm_20 (LSTM)               (None, 128)               67584     \n",
+      "_________________________________________________________________\n",
+      "dense_20 (Dense)             (None, 5)                 645       \n",
+      "=================================================================\n",
+      "Total params: 68,229\n",
+      "Trainable params: 68,229\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "157/157 [==============================] - 1s 3ms/step - loss: 1.9469e-04 - binary_accuracy: 1.0000\n"
      ]
     }
    ],
