Update LSTM code to remove LRS

--- a/RNNplus_v1_4.ipynb
+++ b/RNNplus_v1_4.ipynb
@@ -236,12 +236,28 @@
     "    optimizer = tf.keras.optimizers.Adam(learning_rate=customLRSchedule(hyperparams['initialLearningRate'], hyperparams['learningRateDecay'], hyperparams['decayDurationFactor'], hyperparams['numTrainingSteps']), \\\n",
     "                                    beta_1=hyperparams['beta1'], beta_2=hyperparams['beta2'], epsilon=hyperparams['epsilon'], amsgrad=False, name=\"tunedAdam_lstm\")\n",
     "    model.compile(optimizer=optimizer, loss = 'mse', metrics=[CustomMetricError(threshold=0.0)], run_eagerly=False)\n",
+    "    return model\n",
+    "\n",
+    "def lstm_model_wtLRS(timestep, noInput, noOutput, batchSize):\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.Input(shape=(timestep, noInput),name='Input_layer'))\n",
+    "    model.add(tf.keras.layers.LSTM(units=noInput+noOutput, \n",
+    "                   activation='tanh',\n",
+    "                   recurrent_activation='sigmoid',\n",
+    "                   unroll =False,\n",
+    "                   use_bias=True,\n",
+    "                   recurrent_dropout=0.0,\n",
+    "                   return_sequences=False))\n",
+    "\n",
+    "    model.add(tf.keras.layers.Dense(noOutput,'tanh', name='MLP_layer'))\n",
+    "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-07, amsgrad=False, name=\"Adam_wtlrs\")\n",
+    "    model.compile(optimizer=optimizer, loss = 'mse', metrics=[CustomMetricError(threshold=0.0)], run_eagerly=False)\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "965f99b3",
    "metadata": {
     "tags": []
@@ -252,119 +268,16 @@
      "output_type": "stream",
      "text": [
       "++ seqnetdata.ni=14.no=19.mc=221.numTimeSteps300.52.csv\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 76s 60ms/step - loss: 0.5832 - custom_metric_error: 0.6971 - val_loss: 0.5072 - val_custom_metric_error: 0.7323\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 75s 60ms/step - loss: 0.4734 - custom_metric_error: 0.7486 - val_loss: 0.4615 - val_custom_metric_error: 0.7499\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 85s 67ms/step - loss: 0.5831 - custom_metric_error: 0.6982 - val_loss: 0.5030 - val_custom_metric_error: 0.7329\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 74s 59ms/step - loss: 0.4726 - custom_metric_error: 0.7486 - val_loss: 0.4673 - val_custom_metric_error: 0.7467\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 77s 61ms/step - loss: 0.5891 - custom_metric_error: 0.6949 - val_loss: 0.5177 - val_custom_metric_error: 0.7286\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 87s 70ms/step - loss: 0.4765 - custom_metric_error: 0.7500 - val_loss: 0.4645 - val_custom_metric_error: 0.7486\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 89s 71ms/step - loss: 0.5912 - custom_metric_error: 0.6927 - val_loss: 0.5256 - val_custom_metric_error: 0.7232\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 90s 72ms/step - loss: 0.4836 - custom_metric_error: 0.7414 - val_loss: 0.4700 - val_custom_metric_error: 0.7428\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 87s 69ms/step - loss: 0.5950 - custom_metric_error: 0.6912 - val_loss: 0.5274 - val_custom_metric_error: 0.7233\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 80s 64ms/step - loss: 0.4860 - custom_metric_error: 0.7421 - val_loss: 0.4729 - val_custom_metric_error: 0.7439\n",
-      "++ seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 24s 18ms/step - loss: 0.5254 - custom_metric_error: 0.7485 - val_loss: 0.4403 - val_custom_metric_error: 0.7992\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 23s 18ms/step - loss: 0.3981 - custom_metric_error: 0.8188 - val_loss: 0.3698 - val_custom_metric_error: 0.8298\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 23s 18ms/step - loss: 0.5298 - custom_metric_error: 0.7473 - val_loss: 0.4443 - val_custom_metric_error: 0.7952\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 22s 17ms/step - loss: 0.4000 - custom_metric_error: 0.8168 - val_loss: 0.3682 - val_custom_metric_error: 0.8307\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 24s 19ms/step - loss: 0.5260 - custom_metric_error: 0.7491 - val_loss: 0.4475 - val_custom_metric_error: 0.7922\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 23s 19ms/step - loss: 0.4042 - custom_metric_error: 0.8149 - val_loss: 0.3718 - val_custom_metric_error: 0.8301\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 25s 19ms/step - loss: 0.5245 - custom_metric_error: 0.7480 - val_loss: 0.4388 - val_custom_metric_error: 0.8014\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 25s 20ms/step - loss: 0.3951 - custom_metric_error: 0.8201 - val_loss: 0.3650 - val_custom_metric_error: 0.8323\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 25s 19ms/step - loss: 0.5257 - custom_metric_error: 0.7464 - val_loss: 0.4442 - val_custom_metric_error: 0.7952\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 22s 18ms/step - loss: 0.4089 - custom_metric_error: 0.8125 - val_loss: 0.3791 - val_custom_metric_error: 0.8254\n",
-      "++ seqnetdata.ni=20.no=24.mc=69.numTimeSteps71.85.csv\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 24s 18ms/step - loss: 0.5583 - custom_metric_error: 0.7339 - val_loss: 0.4962 - val_custom_metric_error: 0.7662\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 21s 17ms/step - loss: 0.4756 - custom_metric_error: 0.7774 - val_loss: 0.4684 - val_custom_metric_error: 0.7828\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 22s 17ms/step - loss: 0.5558 - custom_metric_error: 0.7359 - val_loss: 0.4959 - val_custom_metric_error: 0.7653\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 20s 16ms/step - loss: 0.4731 - custom_metric_error: 0.7783 - val_loss: 0.4643 - val_custom_metric_error: 0.7828\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 23s 18ms/step - loss: 0.5564 - custom_metric_error: 0.7364 - val_loss: 0.4924 - val_custom_metric_error: 0.7692\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 22s 18ms/step - loss: 0.4738 - custom_metric_error: 0.7778 - val_loss: 0.4654 - val_custom_metric_error: 0.7812\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 24s 18ms/step - loss: 0.5567 - custom_metric_error: 0.7361 - val_loss: 0.4969 - val_custom_metric_error: 0.7638\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 23s 19ms/step - loss: 0.4746 - custom_metric_error: 0.7766 - val_loss: 0.4686 - val_custom_metric_error: 0.7786\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 26s 20ms/step - loss: 0.5587 - custom_metric_error: 0.7346 - val_loss: 0.4936 - val_custom_metric_error: 0.7673\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 35s 28ms/step - loss: 0.4760 - custom_metric_error: 0.7756 - val_loss: 0.4662 - val_custom_metric_error: 0.7811\n",
-      "++ seqnetdata.ni=23.no=27.mc=52.numTimeSteps80.51.csv\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 30s 23ms/step - loss: 0.6270 - custom_metric_error: 0.6898 - val_loss: 0.5710 - val_custom_metric_error: 0.7273\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 30s 24ms/step - loss: 0.5239 - custom_metric_error: 0.7463 - val_loss: 0.5037 - val_custom_metric_error: 0.7513\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 31s 24ms/step - loss: 0.6296 - custom_metric_error: 0.6887 - val_loss: 0.5743 - val_custom_metric_error: 0.7256\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 34s 27ms/step - loss: 0.5233 - custom_metric_error: 0.7475 - val_loss: 0.5050 - val_custom_metric_error: 0.7500\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 36s 28ms/step - loss: 0.6236 - custom_metric_error: 0.6930 - val_loss: 0.5614 - val_custom_metric_error: 0.7329\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 32s 26ms/step - loss: 0.5168 - custom_metric_error: 0.7478 - val_loss: 0.5029 - val_custom_metric_error: 0.7492\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 36s 28ms/step - loss: 0.6276 - custom_metric_error: 0.6895 - val_loss: 0.5721 - val_custom_metric_error: 0.7261\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 32s 25ms/step - loss: 0.5236 - custom_metric_error: 0.7465 - val_loss: 0.5057 - val_custom_metric_error: 0.7492\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 34s 26ms/step - loss: 0.6305 - custom_metric_error: 0.6859 - val_loss: 0.5745 - val_custom_metric_error: 0.7262\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 33s 26ms/step - loss: 0.5254 - custom_metric_error: 0.7446 - val_loss: 0.5089 - val_custom_metric_error: 0.7486\n",
-      "++ seqnetdata.ni=27.no=32.mc=63.numTimeSteps125.32.csv\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 46s 36ms/step - loss: 0.5839 - custom_metric_error: 0.7167 - val_loss: 0.5176 - val_custom_metric_error: 0.7572\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 45s 36ms/step - loss: 0.4835 - custom_metric_error: 0.7748 - val_loss: 0.4727 - val_custom_metric_error: 0.7779\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 47s 37ms/step - loss: 0.5857 - custom_metric_error: 0.7152 - val_loss: 0.5183 - val_custom_metric_error: 0.7589\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 48s 38ms/step - loss: 0.4915 - custom_metric_error: 0.7720 - val_loss: 0.4831 - val_custom_metric_error: 0.7750\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 52s 41ms/step - loss: 0.5830 - custom_metric_error: 0.7185 - val_loss: 0.5177 - val_custom_metric_error: 0.7600\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 53s 43ms/step - loss: 0.4878 - custom_metric_error: 0.7732 - val_loss: 0.4759 - val_custom_metric_error: 0.7774\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 55s 43ms/step - loss: 0.5880 - custom_metric_error: 0.7134 - val_loss: 0.5193 - val_custom_metric_error: 0.7586\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 54s 43ms/step - loss: 0.4886 - custom_metric_error: 0.7753 - val_loss: 0.4812 - val_custom_metric_error: 0.7773\n",
-      "Epoch 1/8\n",
-      "1250/1250 [==============================] - 54s 42ms/step - loss: 0.5861 - custom_metric_error: 0.7173 - val_loss: 0.5183 - val_custom_metric_error: 0.7578\n",
-      "Epoch 2/8\n",
-      "1250/1250 [==============================] - 56s 45ms/step - loss: 0.4884 - custom_metric_error: 0.7732 - val_loss: 0.4795 - val_custom_metric_error: 0.7755\n"
+      "++ seqnetdata.ni=15.no=22.mc=44.numTimeSteps84.60.csv\n"
      ]
     }
    ],
    "source": [
     "result_tf = {}\n",
-    "result_tf['lstm_lsr_wb_tf']= {}\n",
+    "result_tf['lstm_wtlsr_wb_tf']= {}\n",
     "for filename in fileslist:\n",
     "    filepath = os.path.join(path,filename)\n",
-    "    result_tf['lstm_lsr_wb_tf'][filename] = []\n",
+    "    result_tf['lstm_wtlsr_wb_tf'][filename] = []\n",
     "    print('++', filename)\n",
     "    timestep = int(filename.split('.')[4].split('s')[-1])\n",
     "    with open(filepath, \"r\") as fp:\n",
@@ -389,28 +302,28 @@
     "            y_val[ i, j ] = fromBit( y_val[ i, j ] )\n",
     "\n",
     "    for run_count in range(5):\n",
-    "        model = lstm_model(timestep, noIn, noOut, int(hyperparams['batchSize']))\n",
+    "        model = lstm_model_wtLRS(timestep, noIn, noOut, int(hyperparams['batchSize']))\n",
     "        model_history = model.fit(\n",
     "                    x_train, # input\n",
     "                    y_train, # output\n",
     "                    batch_size=int(hyperparams['batchSize']),\n",
-    "                    verbose=1, # Suppress chatty output; use Tensorboard instead\n",
+    "                    verbose=0, # Suppress chatty output; use Tensorboard instead\n",
     "                    epochs=int(hyperparams['numTrainingSteps']/(x_train.shape[0])),\n",
     "                    validation_data=(x_val, y_val),\n",
     "                    callbacks=[tf.keras.callbacks.EarlyStopping(\"val_custom_metric_error\"), tf.keras.callbacks.TerminateOnNaN(), tf.keras.callbacks.TensorBoard(log_dir=logdir)]\n",
     "                )\n",
-    "        y_pred = model.predict(x_val, verbose=0)\n",
-    "        result_tf['lstm_lsr_wb_tf'][filename].append(round(customMetricfn(y_val, y_pred), 5)*100)\n",
+    "        y_pred = model.predict(x_val, verbose=0, batch_size=int(hyperparams['batchSize']))\n",
+    "        result_tf['lstm_wtlsr_wb_tf'][filename].append(round(customMetricfn(y_val, y_pred), 5)*100)\n",
     "\n",
     "results_dir_o = \"./results/merge_results.csv\"\n",
-    "for k, v in result_tf['lstm_lsr_wb_tf'].items():\n",
-    "    result_tf['lstm_lsr_wb_tf'][k] = round(sum(result_tf['lstm_lsr_wb_tf'][k]) / len(result_tf['lstm_lsr_wb_tf'][k]), 2)\n",
+    "for k, v in result_tf['lstm_wtlsr_wb_tf'].items():\n",
+    "    result_tf['lstm_wtlsr_wb_tf'][k] = round(sum(result_tf['lstm_wtlsr_wb_tf'][k]) / len(result_tf['lstm_wtlsr_wb_tf'][k]), 2)\n",
     "\n",
-    "lstm_lsr_wb_tf = pd.DataFrame.from_dict(result_tf['lstm_lsr_wb_tf'], orient='index', columns=['lstm_lsr_wb_tf'])\n",
+    "lstm_wtlsr_wb_tf = pd.DataFrame.from_dict(result_tf['lstm_wtlsr_wb_tf'], orient='index', columns=['lstm_wtlsr_wb_tf'])\n",
     "\n",
     "readfile = pd.read_csv(results_dir_o, index_col='dataset')\n",
     "readfile.index.name = None\n",
-    "pd.concat([lstm_lsr_wb_tf, readfile], axis=1).to_csv(results_dir_o, index=True, index_label='dataset', mode='w') "
+    "pd.concat([lstm_wtlsr_wb_tf, readfile], axis=1).to_csv(results_dir_o, index=True, index_label='dataset', mode='w') "
    ]
   },
   {
