update taskdividing for fulla node

--- a/RNNplus_v1_2.ipynb
+++ b/RNNplus_v1_2.ipynb
@@ -38,7 +38,7 @@
     "# Debugging with Tensorboard\n",
     "snapshot = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "logdir=\"logs/fit/rnn_v1_1/\" + snapshot\n",
-    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=logdir)\n",
+    "tensom rboard_callback = tf.keras.callbacks.TensorBoard(log_dir=logdir)\n",
     "#path = \"./Datasets/0_180_small_datasets/Version9.128timesteps\"\n",
     "path = \"../../Datasets/1_5_big_datasets/bigdatasets\"\n",
     "fileslist = [f for f in sorted(os.listdir(path)) if os.path.isfile(os.path.join(path, f))]\n",
