Adding bash script

--- a/SparsingResultsFromCpp.ipynb
+++ b/SparsingResultsFromCpp.ipynb
@@ -58,25 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d49af41c-944e-4f26-b315-ec99b2cbaad9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chaut\\Anaconda3\\envs\\master_thesis\\lib\\site-packages\\pandas\\util\\_decorators.py:311: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  return func(*args, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os \n",
     "path = \"./results/0_cpp/5_bigsets/\"\n",
     "fileslist = [f for f in sorted(os.listdir(path)) if os.path.isfile(os.path.join(path, f))]\n",
-    "results_dir_o = \"./results/merge_results_5bigdatasets.csv\"\n",
+    "results_dir_o = \"./results/merge_results_5bigdatasets_new.csv\"\n",
     "\n",
     "def sprasingDataC(dir_i, dir_o, column_name):    \n",
     "    with open(dir_i) as f:\n",
@@ -109,7 +100,7 @@
     "# for file in fileslist:\n",
     "readfile = pd.read_csv(results_dir_o, index_col='dataset',sep='[;,]', engine='python')\n",
     "readfile.index.name = None\n",
-    "pd.concat([readfile, sprasingDataC(path+\"5_bigsets.olstm_wtLRS_nES_c.txt\", results_dir_o, \"5_bigsets.olstm_wtLRS_nES_c.txt\".split('.')[1])], axis=1).to_csv(results_dir_o, index=True, index_label='dataset', mode='w') "
+    "pd.concat([readfile, sprasingDataC(path+\"5_bigsets.rnnp_wtlrs_c.txt\", results_dir_o, \"5_bigsets.rnnp_wtlrs_c.txt\".split('.')[1])], axis=1).to_csv(results_dir_o, index=True, index_label='dataset', mode='w') "
    ]
   },
   {
