--- a/MergingResults.ipynb
+++ b/MergingResults.ipynb
@@ -257,9 +257,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py385_gpu",
+   "display_name": "master_thesis",
    "language": "python",
-   "name": "py385_gpu"
+   "name": "master_thesis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
