--- a/RNNplus_v1_4.ipynb
+++ b/RNNplus_v1_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "e524ac91",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dea12ae5",
    "metadata": {
     "tags": []
@@ -408,14 +408,28 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "chooseModels() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4472/2634660515.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mrun_count\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m         \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodeltype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"RNN_plus\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimestep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtimestep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnoInput\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnoIn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnoOutput\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnoOut\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatchSize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhyperparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'batchSize'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0misLRS\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0misCMF\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchooseModels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m         model_history = model.fit(\n\u001b[0;32m     33\u001b[0m                     \u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: chooseModels() takes 0 positional arguments but 1 was given"
+     "data": {
+      "text/plain": [
+       "'rnn_plus_wtLRS_wtCMF_tf'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/8\n",
+      "1250/1250 [==============================] - 51s 40ms/step - loss: 0.7472 - val_loss: 0.6603\n",
+      "Epoch 2/8\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.6251 - val_loss: 0.6076\n",
+      "Epoch 3/8\n",
+      "1250/1250 [==============================] - 50s 40ms/step - loss: 0.5837 - val_loss: 0.5782\n",
+      "Epoch 4/8\n",
+      "1250/1250 [==============================] - 51s 41ms/step - loss: 0.5520 - val_loss: 0.5384\n",
+      "Epoch 5/8\n",
+      "  77/1250 [>.............................] - ETA: 34s - loss: 0.5176"
      ]
     }
    ],
