Bash script for Additional Problem datasets

--- a/RNNplus_v1_5.ipynb
+++ b/RNNplus_v1_5.ipynb
@@ -384,7 +384,7 @@
     "        \n",
     "    print(f\"Step 1: Dividing the training and testing set with ratio 1:1 ({hyperparams['testSize']*100}%).\")\n",
     "    df_val, df_train = train_test_split(rdf,test_size=hyperparams['testSize'])\n",
-    "    print(\"+ Training set:   \", df_train.shape, df_val.shape)\n",
+    "    print(\"+ Dataset:   \", df_train.shape, df_val.shape)\n",
     "\n",
     "    x_train, y_train = seperateValues(df_train, noIn, noOut, isMoore=ISMOORE_DATASETS)\n",
     "    x_val, y_val = seperateValues(df_val, noIn, noOut, isMoore=ISMOORE_DATASETS)    \n",
