--- a/notebooks/generate_data/processing_2_3_4_5.ipynb
+++ b/notebooks/generate_data/processing_2_3_4_5.ipynb
@@ -5,7 +5,12 @@
    "id": "a296d2b1",
    "metadata": {},
    "source": [
-    "# Data Generation"
+    "<div class=\"alert\" style=\"background-color:#29C5F6; color:white; padding:0px 10px; border-radius:5px;\">\n",
+    "    <h1 style='margin:15px 15px; color:#000000; font-size:32px'><b>Data Generation (Processing)</b></h1>\n",
+    "        <h2 style='margin:15px 15px; color:#000000; font-size:24px'>Addition, MNIST, PTB, and NTU RGB+D Problem</h2>\n",
+    "</div>\n",
+    "\n",
+    "The work is under the **\"Master Thesis\"** by **Chau Tran** with the supervision from **Prof. Roland Olsson**."
    ]
   },
   {
@@ -13,7 +18,8 @@
    "id": "f8138f95-5a02-4899-9e92-abebb9c63257",
    "metadata": {},
    "source": [
-    "## Addition Problem\n",
+    "<div class=\"alert\" style=\"background-color:#29C5F6; border-radius:5px; padding:0px 10px; \"><h3 style='margin:15px 15px'>2. Addition Problem</h3></div>\n",
+    "\n",
     "Source: https://github.com/batzner/indrnn/blob/master/examples/addition_rnn.py\n",
     "\n",
     "Timesteps params: https://arxiv.org/abs/1803.04831\n",
@@ -23,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eba6a7fb-fff1-4c05-8782-faf9c4179cb4",
    "metadata": {
     "jupyter": {
@@ -76,7 +82,7 @@
    "id": "2523413e-5387-4cf6-98b2-9930cb0f6f7f",
    "metadata": {},
    "source": [
-    "## MNIST Problem\n",
+    "<div class=\"alert\" style=\"background-color:#29C5F6; border-radius:5px; padding:0px 10px; \"><h3 style='margin:15px 15px'>3. MNIST Problem</h3></div>\n",
     "\n",
     "Source: https://github.com/batzner/indrnn/blob/8239a819100c40d5662f0d7440bfa7b539366b7f/examples/sequential_mnist.py#L258\n",
     "\n",
@@ -127,7 +133,7 @@
    "id": "dff8690e-6d96-4251-8f5f-b94d7716da38",
    "metadata": {},
    "source": [
-    "## Penn Treebank (PTB) Problem\n",
+    "<div class=\"alert\" style=\"background-color:#29C5F6; border-radius:5px; padding:0px 10px; \"><h3 style='margin:15px 15px'>4. Penn Treebank (PTB) Problem</h3></div>\n",
     "\n",
     "Source: \n",
     "* https://catalog.ldc.upenn.edu/LDC95T7 \n",
@@ -347,7 +353,7 @@
    "id": "252e558c-3c2d-4bf7-bf4b-485453d9e519",
    "metadata": {},
    "source": [
-    "## Skeleton based Action Recognition (NTU RGB+D) Problem\n",
+    "<div class=\"alert\" style=\"background-color:#29C5F6; border-radius:5px; padding:0px 10px; \"><h3 style='margin:15px 15px'>5. Skeleton based Action Recognition (NTU RGB+D) Problem</h3></div>\n",
     "\n",
     "Source: \n",
     "* https://github.com/zibeu/Independently-Recurrent-Neural-Network---IndRNN \n",
@@ -643,7 +649,12 @@
   {
    "cell_type": "markdown",
    "id": "bf3ae469-d583-4b23-b436-676781251bb0",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "## WIreless Sensor Data Mining (WISDM) - Smartphone & Smartwatch Activity Problem\n",
     "\n",
@@ -672,7 +683,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "33fd231f-c411-49d0-a7f8-bbadfabf2425",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
