--- a/notebooks/hyperband_tunning/HyperBand_180datasets_v0.ipynb
+++ b/notebooks/hyperband_tunning/HyperBand_180datasets_v0.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "36d7a300-6f9f-4e54-933b-72c208c0102a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<div class=\"alert\" style=\"background-color:#006400; color:white; padding:0px 10px; border-radius:5px;\"><h1 style='margin:15px 15px; color:#FFFFFF; font-size:32px'>HyperTuning for 180 Datasets</h1></div>\n",
     "\n",
@@ -554,9 +556,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py385_gpu",
+   "display_name": "master_thesis",
    "language": "python",
-   "name": "py385_gpu"
+   "name": "master_thesis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -568,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
