adding ver4, ver 5

--- a/notebooks/rnnplus_for_har/RNNplus_v21_v4.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v21_v4.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "    return tf.nest.map_structure(create_zeros, state_size)  if tf.nest.is_nested(state_size) else create_zeros(state_size)\n",
     "\n",
-    "class RNN_plus_v1_cell(tf.keras.layers.LSTMCell):\n",
+    "class RNN_plus_v1_4_cell(tf.keras.layers.LSTMCell):\n",
     "    def __init__(self, units, kernel_initializer='glorot_uniform', recurrent_initializer='orthogonal', bias_initializer='zeros', dropout=0., recurrent_dropout=0., use_bias=True, **kwargs):\n",
     "        if units < 0:\n",
     "            raise ValueError(f'Received an invalid value for argument `units`, '\n",
@@ -174,7 +174,7 @@
     "            self._enable_caching_device = kwargs.pop('enable_caching_device', True)\n",
     "        else:\n",
     "            self._enable_caching_device = kwargs.pop('enable_caching_device', False)\n",
-    "        super(RNN_plus_v1_cell, self).__init__(units, **kwargs)\n",
+    "        super(RNN_plus_v1_4_cell, self).__init__(units, **kwargs)\n",
     "        self.units = units\n",
     "        self.state_size = self.units\n",
     "        self.output_size = self.units\n",
@@ -226,13 +226,14 @@
     "        op3 = tf.keras.backend.dot(state0, w_op3)\n",
     "        op4 = tf.keras.backend.dot(state0, w_op4)\n",
     "        \n",
-    "        z1 = tf.nn.tanh(tf.nn.tanh(tf.nn.tanh(op4*tf.nn.tanh(srelu(w_aux[0]*op3 + inputs_0)))))\n",
-    "        z2 = tf.nn.tanh(tf.nn.tanh(tf.nn.tanh(srelu(tf.nn.tanh(w_aux[1]*op2 + w_aux[2]*state3 + w_aux[3])))))\n",
+    "        z1 = tf.nn.tanh(op4*tf.nn.tanh(srelu(w_aux[0]*op3 + inputs_0)))  #remove 2 tanh\n",
+    "        z2 = tf.nn.tanh(srelu(tf.nn.tanh(w_aux[1]*op2 + w_aux[2]*state2 + w_aux[3]))) #remove 2 tanh and w_aux[2]*state3 -> w_aux[2]*state2\n",
     "        z3 = tf.nn.tanh(tf.nn.relu(inputs_2))\n",
     "        z  = z1 - (z2 + z3)\n",
-    "        output = prev_output - (z - state1)*z\n",
+    "        output = prev_output - (z - state0)*z #(z - state1)*z -> (z - state0)*z\n",
+    "        f = w_aux[4]*z + op0\n",
     "\n",
-    "        return output, [z, state0, w_aux[4]*z + op0, state2, output]\n",
+    "        return output, [z, state0, f, state2, output]\n",
     "    \n",
     "    def get_initial_state(self, inputs=None, batch_size=None, dtype=None):\n",
     "        return list(_generate_zero_filled_state_for_cell(self, inputs, batch_size, dtype))\n",
@@ -275,7 +276,7 @@
     "def rnn_plus_model(noInput, noOutput, timestep):\n",
     "    \"\"\"Builds a recurrent model.\"\"\"\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(tf.keras.layers.RNN(cell=RNN_plus_v1_cell(units=hyperparams['noUnits']), input_shape=[timestep, noInput], unroll=False, name='RNNp_layer'))\n",
+    "    model.add(tf.keras.layers.RNN(cell=RNN_plus_v1_4_cell(units=hyperparams['noUnits']), input_shape=[timestep, noInput], unroll=False, name='RNNp_layer'))\n",
     "    model.add(tf.keras.layers.Dense(noInput+noOutput, activation='tanh', name='MLP_layer'))\n",
     "    model.add(tf.keras.layers.Dense(noOutput))\n",
     "    optimizer = tf.keras.optimizers.Adam(learning_rate=customLRSchedule(hyperparams['batchSize'], hyperparams['initialLearningRate'], hyperparams['learningRateDecay'], hyperparams['decayDurationFactor'], hyperparams['numTrainingSteps']), \\\n",
