--- a/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
@@ -420,7 +420,72 @@
       "3443/3443 [==============================] - 39s 11ms/step - loss: 0.0498 - val_loss: 0.0384\n",
       "Learning Rate:  tf.Tensor(0.002675134, shape=(), dtype=float32)\n",
       "Epoch 2/23\n",
-      "1496/3443 [============>.................] - ETA: 18s - loss: 0.0292"
+      "3443/3443 [==============================] - 43s 12ms/step - loss: 0.0266 - val_loss: 0.0254\n",
+      "Learning Rate:  tf.Tensor(0.0025522679, shape=(), dtype=float32)\n",
+      "Epoch 3/23\n",
+      "3443/3443 [==============================] - 44s 13ms/step - loss: 0.0219 - val_loss: 0.0209\n",
+      "Learning Rate:  tf.Tensor(0.002429402, shape=(), dtype=float32)\n",
+      "Epoch 4/23\n",
+      "3443/3443 [==============================] - 45s 13ms/step - loss: 0.0190 - val_loss: 0.0201\n",
+      "Learning Rate:  tf.Tensor(0.0023065358, shape=(), dtype=float32)\n",
+      "Epoch 5/23\n",
+      "3443/3443 [==============================] - 46s 13ms/step - loss: 0.0168 - val_loss: 0.0206\n",
+      "Learning Rate:  tf.Tensor(0.00218367, shape=(), dtype=float32)\n",
+      "Epoch 6/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0150 - val_loss: 0.0167\n",
+      "Learning Rate:  tf.Tensor(0.002060804, shape=(), dtype=float32)\n",
+      "Epoch 7/23\n",
+      "3443/3443 [==============================] - 48s 14ms/step - loss: 0.0142 - val_loss: 0.0149\n",
+      "Learning Rate:  tf.Tensor(0.001937938, shape=(), dtype=float32)\n",
+      "Epoch 8/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0126 - val_loss: 0.0153\n",
+      "Learning Rate:  tf.Tensor(0.001815072, shape=(), dtype=float32)\n",
+      "Epoch 9/23\n",
+      "3443/3443 [==============================] - 53s 15ms/step - loss: 0.0117 - val_loss: 0.0142\n",
+      "Learning Rate:  tf.Tensor(0.001692206, shape=(), dtype=float32)\n",
+      "Epoch 10/23\n",
+      "3443/3443 [==============================] - 52s 15ms/step - loss: 0.0105 - val_loss: 0.0144\n",
+      "Learning Rate:  tf.Tensor(0.0015693401, shape=(), dtype=float32)\n",
+      "Epoch 11/23\n",
+      "3443/3443 [==============================] - 51s 15ms/step - loss: 0.0099 - val_loss: 0.0136\n",
+      "Learning Rate:  tf.Tensor(0.0014464741, shape=(), dtype=float32)\n",
+      "Epoch 12/23\n",
+      "3443/3443 [==============================] - 51s 15ms/step - loss: 0.0086 - val_loss: 0.0113\n",
+      "Learning Rate:  tf.Tensor(0.0013236081, shape=(), dtype=float32)\n",
+      "Epoch 13/23\n",
+      "3443/3443 [==============================] - 51s 15ms/step - loss: 0.0078 - val_loss: 0.0122\n",
+      "Learning Rate:  tf.Tensor(0.0012007422, shape=(), dtype=float32)\n",
+      "Epoch 14/23\n",
+      "3443/3443 [==============================] - 48s 14ms/step - loss: 0.0070 - val_loss: 0.0116\n",
+      "Learning Rate:  tf.Tensor(0.0010778762, shape=(), dtype=float32)\n",
+      "Epoch 15/23\n",
+      "3443/3443 [==============================] - 48s 14ms/step - loss: 0.0062 - val_loss: 0.0106\n",
+      "Learning Rate:  tf.Tensor(0.0009550102, shape=(), dtype=float32)\n",
+      "Epoch 16/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0053 - val_loss: 0.0099\n",
+      "Learning Rate:  tf.Tensor(0.0008321442, shape=(), dtype=float32)\n",
+      "Epoch 17/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0047 - val_loss: 0.0089\n",
+      "Learning Rate:  tf.Tensor(0.0007092783, shape=(), dtype=float32)\n",
+      "Epoch 18/23\n",
+      "3443/3443 [==============================] - 48s 14ms/step - loss: 0.0041 - val_loss: 0.0086\n",
+      "Learning Rate:  tf.Tensor(0.00058641215, shape=(), dtype=float32)\n",
+      "Epoch 19/23\n",
+      "3443/3443 [==============================] - 48s 14ms/step - loss: 0.0034 - val_loss: 0.0085\n",
+      "Learning Rate:  tf.Tensor(0.0004635465, shape=(), dtype=float32)\n",
+      "Epoch 20/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0029 - val_loss: 0.0080\n",
+      "Learning Rate:  tf.Tensor(0.00034068036, shape=(), dtype=float32)\n",
+      "Epoch 21/23\n",
+      "3443/3443 [==============================] - 52s 15ms/step - loss: 0.0025 - val_loss: 0.0078\n",
+      "Learning Rate:  tf.Tensor(0.00021781446, shape=(), dtype=float32)\n",
+      "Epoch 22/23\n",
+      "3443/3443 [==============================] - 51s 15ms/step - loss: 0.0022 - val_loss: 0.0078\n",
+      "Learning Rate:  tf.Tensor(9.494834e-05, shape=(), dtype=float32)\n",
+      "Epoch 23/23\n",
+      "3443/3443 [==============================] - 51s 15ms/step - loss: 0.0020 - val_loss: 0.0077\n",
+      "val0.csv val_performance = 0.007747558876872063\n",
+      "val0.csv val accuracy = 0.97131\n"
      ]
     }
    ],
